 - Applied some portability fixes for SGI IRIX/MipsPro compiler    (e.g. a fix for BUG#3507 and some modifications recommended    by Andrea Suatoni and Joerg Behrens - thank you!)

acinclude.m4:
   - OpenSSL libs are installed in /usr/freeware/include and
     /usr/freeware/lib32 on SGI IRIX - expanded search list
man/mysqlaccess.1.in:
   - cosmetical fix
man/mysqldump.1.in:
   - cosmetical fix
mysys/hash.c:
   - portability fix: some compilers can't handle inlining of rec_hashnr
     (BUG#3507)
vio/test-sslserver.c:
   - portability fix for SGI MipsPro compiler: define client_len as
     "socklen_t" instead of "size_t"